save decrypt files in server
