# handler/savedFile.go
@@ -1,0 +1,79 @@
+package handler
+
+import (
+	"fmt"
+	"io/ioutil"
+	"net/http"
+	"os"
+
+	"github.com/gin-gonic/gin"
+)
+
+// @BasePath /
+
+// @Summary upload file
+
+// @Description upload a file to encrypt
+// @Tags Server operations
+// @Accept multipart/form-data
+// @Produce json
+// @Param file formData file true "File"
+// @Success 200 {string} file_uploaded
+// @Router /saved_file [post]
+func SavedFile(ctx *gin.Context) {
+	ctx.Request.ParseMultipartForm(10 << 20)
+
+	file, err := ctx.FormFile("arquivo")
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	//Abra o arquivo diretamente sem salvá-lo no disco
+	uploadedFile, err := file.Open()
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	defer uploadedFile.Close()
+
+	data, err := ioutil.ReadAll(uploadedFile)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	// Dividir os dados em blocos menores
+	maxBlockSize := 245
+	var encryptedBlocks []byte
+	for len(data) > 0 {
+		blockSize := len(data)
+		if blockSize > maxBlockSize {
+			blockSize = maxBlockSize
+		}
+
+		//Escreve o arquivo em blocos de bytes
+		encryptedBlock := data[:blockSize]
+
+		encryptedBlocks = append(encryptedBlocks, encryptedBlock...)
+		data = data[blockSize:]
+	}
+
+	tempDir := "./decrypted_files"
+	err = os.MkdirAll(tempDir, os.ModePerm)
+	handleError("Error creating 'decrypted_files' directory", err)
+
+	tempfile, err := os.Create(tempDir + "/" + file.Filename)
+	handleError("Error creating file", err)
+	defer tempfile.Close()
+
+	err = ioutil.WriteFile(tempfile.Name(), encryptedBlocks, 0644)
+	if err != nil {
+		fmt.Println("Erro ao escrever o arquivo descriptografado:", err)
+		return
+	}
+
+	fmt.Println("Arquivo descriptografado com sucesso!")
+
+	ctx.JSON(http.StatusOK, "file decrypted")
+}
